--- a/SmoWebBase/templates/SmoWebBase/blocks/HomeBlock.jinja
+++ b/SmoWebBase/templates/SmoWebBase/blocks/HomeBlock.jinja
@@ -1,4 +1,5 @@
-<h1 class="title">SmoWeb Computational Platform</h1>
+<h1 class="title">SmoWeb</h1>
+<div class="subtitle">The open computational platform by <a href="/SmoWebBase/Sysmo">SysMo</a></div>
 <div style="margin-top: 30px; margin-bottom: 30px; text-align: center;">
 {% for routerName, router in pageView.router.registry.iteritems() %}
 	{% for pageName, pageClass in router.pages.iteritems() %}
@@ -34,8 +35,7 @@
 </div>
 <div style="background: white; padding: 20px; border-radius: 10px;">		
 	<p>
-		Welcome to <strong>SmoWeb</strong>, the open computational platform from 
-		<a class="reference external" href="http://www.sysmoltd.com">SysMo</a>. Here you will find a
+		Welcome to our computational platform. Here you will find a
 		number of one-page apps that could be used to tackle various
 		engineering problems. Please select the appropriate page/app from
 		the navigation bar on the top.
