--- a/SmoWebBase/templates/SmoWebBase/restblocks/html/Company.html
+++ b/SmoWebBase/templates/SmoWebBase/restblocks/html/Company.html
@@ -1,21 +1,47 @@
 <div class="document" id="sysmo">
 <h1 class="title">SysMo</h1>
-<p class="align-center">Open software and hardware development</p>
-<div class="section" id="what-we-can-do-for-you">
-<h1>What we can do for you</h1>
+<p class="subtitle">Open software and hardware development</p>
+<div class="section" id="who-we-are">
+<h1>Who we are</h1>
+<p>A team of young and motivated engineers, mathematicians and computer scientists,
+providing services in engineering modeling and technical software development.s</p>
+</div>
+<div class="section" id="what-we-can-do">
+<h1>What we can do</h1>
 <ul class="simple">
-<li>computer modeling of engineering systems</li>
-<li>computations and simulations using existing software (both commercial and open source)</li>
-<li>extend and customize existing products or create completely new products that precisely fit your modeling needs.</li>
+<li>create computer models of engineering systems</li>
+<li>model energy and mass exchange, fluid and heat flow</li>
+<li>extend and customize existing simulation products</li>
+<li>create new software products for modeling and simulation</li>
 </ul>
 </div>
-<div class="section" id="what-is-special-about-us-is-that-we-can">
-<h1>What is special about us is that we can...</h1>
+<div class="section" id="what-is-special-about-us">
+<h1>What is special about us</h1>
 <ul class="simple">
-<li>help you design your own simulation product</li>
-<li>combine, customize, optimize existing tools for your particular need</li>
+<li>we can develop modeling tools customized to meet you needs</li>
+<li>we can combine, customize and automate existing modeling tools</li>
 </ul>
-<p>Mathematical libraries, equation solvers, mesh generators, pre- and post-processing tools, parallelization software - everything is already available, very often at no cost. We will simply put the pieces together for you.</p>
+</div>
+<div class="section" id="what-we-believe">
+<h1>What we believe</h1>
+<blockquote>
+<p>&quot;Free software is a matter of liberty, not price. To understand the concept,
+you should think of free as in free speech, not as in free beer.&quot;</p>
+<p class="attribution">&mdash;Richard Stallman</p>
+</blockquote>
+<p>We firmly believe in <strong>Free and Open Source Software</strong>. Open source gives you the freedom to use, modify, improve
+and re-distribute your product at your discretion. Time and time again Open Source proves to
+be viable, and often superior alternative to commercial closed source software. Open
+Source guarantees that the software you use will be independant and provided it has
+a thriving community, will continue to develop and improve.</p>
+<p>Science, engineering, technology are all collective achievements and we stand tall
+because, because we step on the shoulders of the ones before us. Mathematical libraries,
+equation solvers, mesh generators, pre- and post-processing tools, parallelization software,
+network tools, databases, encryption tools, virtually everything is out there,
+already available, very often at no cost. Why not use it? Why not give back our own share?</p>
+<p>Of course, we realize Open Source is not always applicable. We don't expect that everyone
+believes in it the way we do, so we are ready and willing to protect the know-how of
+our clients by all means possible.</p>
 </div>
 <div class="section" id="want-to-get-to-know-us-better">
 <h1>Want to get to know us better?</h1>
