--- a/SmoWebBase/templates/SmoWebBase/restblocks/html/Industries.html
+++ b/SmoWebBase/templates/SmoWebBase/restblocks/html/Industries.html
@@ -4,18 +4,14 @@
 <div class="section" id="automotive">
 <h1>Automotive</h1>
 <ul class="simple">
-<li>Conventional and innovative fuel systems (hydrogen, natural gas, LPG) including<ul>
-<li>storage tanks</li>
-<li>refueling systems</li>
-<li>fuel conditioning components (pressure regulators, fuel heaters etc)</li>
-</ul>
-</li>
-<li>Fuel cells<ul>
-<li>reaction modeling</li>
-<li>thermal management</li>
-<li>pressure management</li>
-</ul>
-</li>
+<li>Conventional and innovative fuel systems (hydrogen, natural gas, LPG) including
+* storage tanks
+* refueling systems
+* fuel conditioning components (pressure regulators, fuel heaters etc)</li>
+<li>Fuel cells
+* chemical reaction modeling
+* thermal management
+* pressure management</li>
 <li>Engine thermal management</li>
 <li>Fuel injectors</li>
 <li>Stresses and fatigue calculations</li>
