--- a/SmoWebBase/templates/SmoWebBase/restblocks/html/People.html
+++ b/SmoWebBase/templates/SmoWebBase/restblocks/html/People.html
@@ -7,9 +7,9 @@
 <col width="30%" />
 </colgroup>
 <tbody valign="top">
-<tr><td><img alt="APavlov" src="/static/img/people/APavlov.jpg" /></td>
-<td><img alt="MBorisov" src="/static/img/people/MBorisov.jpg" /></td>
-<td><img alt="IMihaylov" src="/static/img/people/IMihaylov2.jpg" /></td>
+<tr><td><img alt="APavlov" src="/static/img/people/APavlov.jpg" style="height: 200px;" /></td>
+<td><img alt="MBorisov" src="/static/img/people/MBorisov.jpg" style="height: 200px;" /></td>
+<td><img alt="IMihaylov" src="/static/img/people/IMihaylov.jpg" style="height: 200px;" /></td>
 </tr>
 <tr><td><a class="reference internal" href="#atanas-pavlov">Atanas Pavlov</a></td>
 <td><a class="reference internal" href="#milen-borisov">Milen Borisov</a></td>
@@ -23,37 +23,75 @@
 </table>
 <div class="section" id="atanas-pavlov">
 <h1>Atanas Pavlov</h1>
-<p>Education:
-Massachusetts Institute of Technology, B.S. in Physics (2004), M.S. in Mechanical Engineering (2006)</p>
-<p>Previous work:
-2006-2010 BMW AG, Munich, Germany, Hydrogen Fuel Tank Development: System, thermal and CFD Simulations, participation in HySim project</p>
-<p>2004-2006 MIT Bioinstrumentation Lab:  Development of high-speed needle-free injection system</p>
-<p>Publications/patents:
-DE102007057979 (A1), Tobias Brunner and Atanas Pavlov, 2009-06-04
-Cryogenic hydrogen filling method for storage container i.e. cryogenic tank, of motor vehicle, involves re-cooling hydrogen using suitable cooling potential, supplying residual gas and supplying large portion of gas into tank</p>
-<p>DE102007023821 (A1), Tobias Brunner and Atanas Pavlov, 2008-11-27
-Method for filling cryogenic hydrogen tank on vehicle has residual gas tapped off to be conditioned at lower temperature before returning to cool the tank prior to filling with fresh gas</p>
+<dl class="docutils">
+<dt>Education</dt>
+<dd><ul class="first last simple">
+<li>Massachusetts Institute of Technology, B.S. in Physics (2004), M.S. in Mechanical Engineering (2006)</li>
+<li>Cambridge University (2002-2003), Cambridge-MIT exchange program</li>
+</ul>
+</dd>
+<dt>Previous work</dt>
+<dd><ul class="first last simple">
+<li>2006-2010 BMW AG, Munich, Germany, Hydrogen Fuel Tank Development: system, thermal
+and CFD Simulations, participation in HySim project</li>
+<li>2004-2006 MIT Bioinstrumentation Lab:  Development of high-speed needle-free injection system</li>
+</ul>
+</dd>
+<dt>Publications/patents</dt>
+<dd><ul class="first last simple">
+<li>DE102007057979 (A1), Tobias Brunner and Atanas Pavlov, 2009-06-04
+Cryogenic hydrogen filling method for storage container i.e. cryogenic tank, of motor vehicle,
+involves re-cooling hydrogen using suitable cooling potential, supplying residual gas and supplying large portion of gas into tank</li>
+<li>DE102007023821 (A1), Tobias Brunner and Atanas Pavlov, 2008-11-27
+Method for filling cryogenic hydrogen tank on vehicle has residual gas tapped off to be conditioned
+at lower temperature before returning to cool the tank prior to filling with fresh gas</li>
+</ul>
+</dd>
+</dl>
 </div>
 <div class="section" id="milen-borisov">
 <h1>Milen Borisov</h1>
-<p>Education:
-Bulgarian Academy of Sciences, Dr. (PhD), Mathematical Modelling and Applications (2013)
-Sofia University &quot;St. Kliment Ohridski&quot;, B.S. in Informatics (2004), M.S. in Informatics (2008)</p>
-<p>Previous work:
-2003-2010 Mapex JSC, Sofia, Bulgaria, GIS software development</p>
-<p>Publications/patents:
-[1] Borisov, M., Dimitrova, N., 2010. One-parameter bifurcation analysis of dynamical systems using maple. Serdica Journal of Computing 4 (1), 43--56. ISSN 1312-6555. IF 1.472</p>
-<p>[2] Borisov, M., Dimitrova, N., 2011. Stability analysis in a model of 1,2-dichloroethane biodegradation by klebsiella oxytoca va 8391 immobilized on granulated activated carbon. AIP Conference Proceedings 1404, 284--298. doi: <a class="reference external" href="http://dx.doi.org/10.1063/1.3659931">http://dx.doi.org/10.1063/1.3659931</a></p>
-<p>[3] Borisov, M., Dimitrova, N., Beschkov, V., 2012. Stability analysis of a bioreactor model for biodegradation of xenobiotics. Computers and Mathematics with Applications, vol. 64, No. 3, 361--373. ISSN 0898-1221. doi: <a class="reference external" href="http://dx.doi.org/10.1016/j.camwa.2012.02.067">http://dx.doi.org/10.1016/j.camwa.2012.02.067</a></p>
-<p>[4] Borisov, M., 2012. Biftools: Maple package for bifurcation analysis of dynamical systems. Bulgarian Academy of Sciences, Institute of Mathematics and Informatics, Scientific Reports No. 1/2012, 35 pages; ISSN 1314-541X</p>
+<dl class="docutils">
+<dt>Education</dt>
+<dd>Bulgarian Academy of Sciences, Dr. (PhD), Mathematical Modelling and Applications (2013)
+Sofia University &quot;St. Kliment Ohridski&quot;, B.S. in Informatics (2004), M.S. in Informatics (2008)</dd>
+<dt>Previous work</dt>
+<dd><ul class="first last simple">
+<li>2003-2010 Mapex JSC, Sofia, Bulgaria, GIS software development</li>
+</ul>
+</dd>
+<dt>Publications/patents</dt>
+<dd><ul class="first last simple">
+<li>Borisov, M., Dimitrova, N., 2010. One-parameter bifurcation analysis of dynamical systems using maple.
+Serdica Journal of Computing 4 (1), 43--56. ISSN 1312-6555. IF 1.472</li>
+<li>Borisov, M., Dimitrova, N., 2011. Stability analysis in a model of 1,2-dichloroethane
+biodegradation by klebsiella oxytoca va 8391 immobilized on granulated activated carbon. AIP Conference Proceedings 1404, 284--298. doi: <a class="reference external" href="http://dx.doi.org/10.1063/1.3659931">http://dx.doi.org/10.1063/1.3659931</a></li>
+<li>Borisov, M., Dimitrova, N., Beschkov, V., 2012. Stability analysis of a bioreactor model for biodegradation of xenobiotics.
+Computers and Mathematics with Applications, vol. 64, No. 3, 361--373. ISSN 0898-1221. doi: <a class="reference external" href="http://dx.doi.org/10.1016/j.camwa.2012.02.067">http://dx.doi.org/10.1016/j.camwa.2012.02.067</a></li>
+<li>Borisov, M., 2012. Biftools: Maple package for bifurcation analysis of dynamical systems.
+Bulgarian Academy of Sciences, Institute of Mathematics and Informatics, Scientific Reports No. 1/2012, 35 pages; ISSN 1314-541X</li>
+</ul>
+</dd>
+</dl>
 </div>
 <div class="section" id="ivaylo-mihaylov">
 <h1>Ivaylo Mihaylov</h1>
-<p>Education:
-Sofia University &quot;St. Kliment Ohridski&quot;, B.S. in Computer Science (2006)</p>
-<p>Courses &amp; Certificates:
-Verified certificates from Massachusetts Institute of Technology:
-6.00.1x Introduction to Computer Science and Programming Using Python
-6.00.2x Introduction to Computational Thinking and Data Science</p>
+<dl class="docutils">
+<dt>Education</dt>
+<dd>Sofia University &quot;St. Kliment Ohridski&quot;, B.S. in Computer Science (2006)</dd>
+<dt>Courses &amp; Certificates</dt>
+<dd><ul class="first last">
+<li><dl class="first docutils">
+<dt>Verified certificates from Massachusetts Institute of Technology:</dt>
+<dd><ul class="first last simple">
+<li>6.00.1x Introduction to Computer Science and Programming Using Python</li>
+<li>6.00.2x Introduction to Computational Thinking and Data Science</li>
+</ul>
+</dd>
+</dl>
+</li>
+</ul>
+</dd>
+</dl>
 </div>
 </div>
