--- a/SmoWebBase/templates/SmoWebBase/restblocks/html/Products.html
+++ b/SmoWebBase/templates/SmoWebBase/restblocks/html/Products.html
@@ -1,2 +1,31 @@
-<div class="document">
+<div class="document" id="products">
+<h1 class="title">Products</h1>
+<div class="section" id="software-products">
+<h1>Software products</h1>
+<div class="section" id="smoweb">
+<h2>SmoWeb</h2>
+<p>Online platform for engineering calculations and simulations.
+But if you are already here, you probably know what SmoWeb is.</p>
+</div>
+<div class="section" id="smoflow">
+<h2>SmoFlow</h2>
+<p>A C++ library for simulation of fluid flow with heat exchange</p>
+</div>
+<div class="section" id="fsm-controller-editor">
+<h2>FSM Controller Editor</h2>
+<p>A small application with a graphical user interface used for designing
+state machine controllers</p>
+</div>
+<div class="section" id="ferma">
+<h2>FermA</h2>
+<p>An application for managing small animal farms</p>
+</div>
+</div>
+<div class="section" id="hardware-products">
+<h1>Hardware products</h1>
+<div class="section" id="programmable-thermostat">
+<h2>Programmable thermostat</h2>
+<p>based on Atmel ATMega microprocessor</p>
+</div>
+</div>
 </div>
