--- a/SmoWebBase/templates/SmoWebBase/restblocks/html/Company.html
+++ b/SmoWebBase/templates/SmoWebBase/restblocks/html/Company.html
@@ -29,18 +29,18 @@ providing services in engineering modeling and technical software development.s<
 you should think of free as in free speech, not as in free beer.&quot;</p>
 <p class="attribution">&mdash;Richard Stallman</p>
 </blockquote>
-<p>We firmly believe in <strong>Free and Open Source Software</strong>. Open source gives you the freedom to use, modify, improve
-and re-distribute your product at your discretion. Time and time again Open Source proves to
-be viable, and often superior alternative to commercial closed source software. Open
-Source guarantees that the software you use will be independant and provided it has
-a thriving community, will continue to develop and improve.</p>
-<p>Science, engineering, technology are all collective achievements and we stand tall
-because, because we step on the shoulders of the ones before us. Mathematical libraries,
+<p>We firmly believe in <strong>free and open source software</strong>. Open source gives you the freedom to use, modify, improve
+and re-distribute your product at your discretion. Time and again, open source has proven to
+be a viable, and often superior, alternative to commercial closed source software. Open
+source guarantees that the software you use will be independent and given that it is backed by
+a thriving community, it is bound to continue to develop and improve.</p>
+<p>Science, engineering and technology are all collective achievements, and we stand tall
+because we stand on the shoulders of those before us. Mathematical libraries,
 equation solvers, mesh generators, pre- and post-processing tools, parallelization software,
-network tools, databases, encryption tools, virtually everything is out there,
-already available, very often at no cost. Why not use it? Why not give back our own share?</p>
-<p>Of course, we realize Open Source is not always applicable. We don't expect that everyone
-believes in it the way we do, so we are ready and willing to protect the know-how of
+network tools, databases and encryption tools - virtually everything is already out there,
+readily available and very often at no cost. Why not use it? Why not contribute our own share?</p>
+<p>Of course, we realize that open source is not always applicable. We don't expect that everyone
+should believe in it the way we do, so we are ready and willing to protect the know-how of
 our clients by all means possible.</p>
 </div>
 <div class="section" id="want-to-get-to-know-us-better">
